# davdunc-plugins

./: README.md
equities-watchlist/: .env.example  pyproject.toml
equities-watchlist/equities_watchlist/: calendar_events.py  config.py  finviz_client.py  flatfiles.py  persistence.py  polygon_client.py  server.py
market-data/: README.md
market-data/.claude-plugin/: plugin.json
market-data/skills/market-data/: SKILL.md
